006-04-11  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py: always use a converter to set the contents of a
	column in a ObjectList. Fixes #2523

2006-04-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/combomixin.py (ComboMixin.prefill) 
	(ComboMixin.append_item): Check for basestring instead of str
	so Unicode can be used, thanks to Alceste Scalas

2006-04-07  Patrick K O'Brien <pobrien@orbtech.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: only respond to the toggled event 
	when a boolean column is set to editable. Fixes #2525

2006-04-06  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/entry.py:
	* kiwi/ui/icon.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/spinbutton.py:
	Refactor tooltips to fix bug #1954

2006-04-06  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* examples/validation/personalinformation.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_Entry.py:
	Changed mask characters and some clean-ups. Fixes #2519

2006-04-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py: Clean up the handling of the exact_completion
	property.

	* kiwi/python.py: Get rid of GObject stuff in base classes, move 
	it to kiwi utils
	* kiwi/utils.py: inline class initiable meta here 

2006-03-30  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py (DateEntry.__init__): 
	Only set the mask if it's not empty

	* kiwi/ui/widgets/entry.py (ProxyEntry.set_mask_for_data_type): 
	Instead of skipping, try to do an educated guess of the mask.

2006-03-30  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/proxywidget.py: update the validation error tooltip 
	every time the value changes (for tooltips that containg the 
	invalid value)
	* po/kiwi.pot:
	* po/pt_BR.po: new translations
	* po/sv.po:

2005-03-29  Ali Afshar <aafshar@gmail.com>
